--- a/terraform/provider.tf.tmpl
+++ b/terraform/provider.tf.tmpl
@@ -11,6 +11,7 @@ variable "ibmcloud_api_key" {
 }
 
 provider "ibm" {
+  version = ">= 0.15.1"
   softlayer_username = "${var.softlayer_username}"
   softlayer_api_key  = "${var.softlayer_api_key}"
   bluemix_api_key    = "${var.ibmcloud_api_key}"
